# breadth-first-zip

./: Cargo.toml  README.md  ci.sh  flake.nix
bfzip-util/: Cargo.toml
bfzip-util/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: impure.rs  lib.rs  pure.rs  test.rs  test_impure.rs  test_pure.rs
