[package]
name = "breadth-first-zip"
version = "0.1.0"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Breadth-first `zip` guaranteeing a monotonically increasing sum of indices."
license = "MPL-2.0"
keywords = ["iterator", "breadth-first", "zip", "traverse", "traversal"]
categories = ["algorithms", "data-structures", "mathematics", "no-std::no-alloc", "rust-patterns"]
repository = "https://github.com/wrsturgeon/breadth-first-zip"
build = "build.rs"

[dependencies]
breadth-first-zip-macros = ">=0.1.0"

[dev-dependencies]
quickcheck = ">=1.0.3"
