[package]
name = "bfzip-util"
version = "0.1.0"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Breadth-first exhaustive `zip` for repeatable iterators."
license = "MPL-2.0"
repository = "https://github.com/wrsturgeon/bfzip"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = ">=1.0.63"
quote = ">=1.0.28"
syn = { version = ">=2.0.22", features = ["full"] }
