[package]
name = "breadth-first-zip-macros"
version = "0.2.2"
authors = ["Will Sturgeon <willstrgn@gmail.com>"]
edition = "2021"
description = "Breadth-first `zip` guaranteeing a monotonically increasing sum of indices."
license = "MPL-2.0"
repository = "https://github.com/wrsturgeon/breadth-first-zip"
build = "build.rs"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = ">=1.0.63"
quote = ">=1.0.28"
syn = { version = ">=2.0.22", features = ["full"] }
